--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,6 +1,6 @@
 <header>
     <h1>{{title}}</h1>
-    <a href="/">Cuaca</a>
+    <a href="/">Weather</a>
     <a href="/about">About Me</a>
     <a href="/article">Artikel</a>
     <a href="/help">Help</a>
