--- a/templates/views/article.hbs
+++ b/templates/views/article.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <link href="css/style.css" rel="stylesheet">
-    <title>Weather</title>
+    <title>Artikel</title>
 </head>
 <body>
     <div class="main-content">
