--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
    <link href="css/style.css" rel="stylesheet">
-    <title>Weather</title>
+    <title>404</title>
 </head>
 <body>
     <div class="main-content">
         {{>header}}
+        {{message}}
     </div>
 
     {{>footer}}
