--- a/templates/views/thermocouple.hbs
+++ b/templates/views/thermocouple.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="css/style.css" rel="stylesheet">
-    <title>Weather</title>
+    <title>Thermocouple</title>
 </head>
 <body>
     <div class="main-content">
