Add instrument  article content

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,8 +8,10 @@
     <div class="main-content">
         {{>header}}
 
-        <p>Seorang ninja dari desa Konoha yang tidak bisa menggunakan teknik ninjutsu dan genjutsu, 
-           hanya bisa menggunakan teknik taijutsu dan jurus andalan saya adalah langkah seribu.  
+        <p>Saya merupakan seorang lulusan dari EVE <em>(Enterprise Base Vocational Education)</em> yaitu sebuah program pendidikan
+        setingkat ahlimadya atau D3  kerja sama antara PT Holcim Indonesia 
+        yang sekarang menjadi PT Solusi Bangun Indonesia dan Politeknik
+            Negeri Jakarta angkatan pertama kelulusan tahun 2008 dan sekarang saya bekerja sebagai seorang teknisi listrik dan instrumentasi di shift maintenance.
         </p>
         <img src="img/profile-picture.jpeg" class="portrait">
     </div>
