--- a/templates/views/article.hbs
+++ b/templates/views/article.hbs
@@ -8,8 +8,42 @@
     <div class="main-content">
         {{>header}}
         
-        {{>nav}}
-    </div>
+<h3>Meindre Blogs</h3>   
+{{>nav}}    
+<h2>{{sub}}</h2>
+
+
+
+<p>Posted by : <strong>Indra Permana</strong> 18 Mei 2022 </p>
+
+<img src="img/instrument_pic.JPG" width="500px" alt="instrument_process">
+
+
+<article>
+<h3>Apa itu Peralatan Instrumentasi</h3>
+<p>Peralatan Instrumentasi adalah sebuah peralatan untuk mengukur atau memanipulasi proses variabel seperti aliran, temperature, 
+level, tekanan dan lainnya. Instrumentasi juga termasuk di dalamnya berbagai macam tipe seperti valve dan transmitter
+dan alat yang kompleks seperti analyzer</p>
+
+Kontrol Proses dan manufaktur yang menggunakan Otomatisasi, adalah salah satu cabang pengaplikasian
+Instrumentasi 
+
+<h3>Bagaimana cara kerjanya</h3>
+<p>Kontrol instrumentasi termasuk kepada peralatan seperti solenoid, valve, circuit breaker, relay dan lain lain.
+Peralatan - peralatan ini dapat merubah parameter di lapangan dan dapat mengontrol 
+secara remote atau otomatis. </p>
+
+<p>Transmitter adalah peralatan yang menghasilkan sinyal analog, biasanya dalam bentuk 4 - 20ma sinyal arus listrik, 
+adapun banyak pilihan lain yang memungkinkan menggunakan voltase atau tegangan, frekuensi, atau tekanan </p>
+
+<p>Di era modern sekarang, sinyal dapat di transmisikan  via jaringan seperti Devicenet atau Fieldbus Foundation. 
+Jenis jaringan seperti ini dapat menghemat kabel dan peralatan dan sangat reliable atau handal.</p>
+
+<p>Sinyal ini bisa di gunakan untuk mengontrol peralatan instrument lainnya, atau dikirim ke
+PLC, DCS, HMI dan SCADA system. Yang mana akan digunakan untuk memanipulasi nilai  untuk 
+mengontrol peralatan lain dan proses di dalam sebuah sistem. </p>
+</article>
+</div>
 
     {{>footer}}
 </body>
