--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -1,7 +1,7 @@
 <nav>
-    
+    <h1 class="blog-title">{{name}}</h1>
     <a href="/thermocouple">Thermocouple</a>
     <a href="/rtd">RTD</a>
-    <a href="#">Transmitter</a>
+    <a href="/loadcell">Loadcell</a>
     <a href="#">Speed Sensor</a>
 </nav>
