--- a/templates/views/article.hbs
+++ b/templates/views/article.hbs
@@ -8,25 +8,26 @@
     <div class="main-content">
         {{>header}}
         
-<h3>Meindre Blogs</h3>   
-{{>nav}}    
-<h2>{{sub}}</h2>
+        {{>nav}}    
 
+<article>
+    <header>
 
+<h2>{{article}}</h2>
 
-<p>Posted by : <strong>Indra Permana</strong> 18 Mei 2022 </p>
+<p class="author">Posted by : <strong>Indra Permana</strong> 18 Mei 2022 </p>
 
 <img src="img/instrument_pic.JPG" width="500px" alt="instrument_process">
 
+</header>
 
-<article>
-<h3>Apa itu Peralatan Instrumentasi</h3>
-<p>Peralatan Instrumentasi adalah sebuah peralatan untuk mengukur atau memanipulasi proses variabel seperti aliran, temperature, 
+<h3>Apa itu Instrumentasi</h3>
+<p>Instrumentasi adalah sebuah peralatan untuk mengukur atau memanipulasi proses variabel seperti aliran, temperature, 
 level, tekanan dan lainnya. Instrumentasi juga termasuk di dalamnya berbagai macam tipe seperti valve dan transmitter
 dan alat yang kompleks seperti analyzer</p>
 
-Kontrol Proses dan manufaktur yang menggunakan Otomatisasi, adalah salah satu cabang pengaplikasian
-Instrumentasi 
+<p>Kontrol Proses dan manufaktur yang menggunakan Otomatisasi, adalah salah satu cabang pengaplikasian
+Instrumentasi </p>
 
 <h3>Bagaimana cara kerjanya</h3>
 <p>Kontrol instrumentasi termasuk kepada peralatan seperti solenoid, valve, circuit breaker, relay dan lain lain.
