--- a/templates/views/thermocouple.hbs
+++ b/templates/views/thermocouple.hbs
@@ -8,24 +8,21 @@
     <div class="main-content">
         {{>header}}
         
-
+        {{>nav}}
 <article>
-<h3>Meindre Blogs</h3>  
-{{>nav}}
-<h4>{{sub}}</h4>
-
-
-<p>Posted by : <strong>Indra Permana</strong>  Jumat 13 Mei 2022</p>
+<header>
+<h2>{{article}}</h2>
+<p class="author">Posted by : <strong>Indra Permana</strong>  13 Mei 2022</p>
 
 <img src="img/thermocouple_illustration.jpg" width="500">
-
-<h4>Thermocouple sebagai sensor suhu</h4>
+</header>
+<h3>Thermocouple sebagai sensor suhu</h3>
 
 <p>Thermocouple banyak digunakan secara luas di dalam dunia industri. 
 Aplikasinya digunakan untuk pengukuran suhu
 di kiln, preheater, gas turbin exhaust, diesel engine, dan proses industri lainnya.</p> 
 
-<h4>Apa itu thermocouple</h4>
+<h3>Apa itu thermocouple</h3>
 
 <p>Thermocouple adalah sebuah alat ukur atau sensor untuk mengukur suhu.
 Di dalam thermocouple terdapat dua kawat logam konduktor yang berbeda jenisnya dan 
@@ -49,13 +46,13 @@ mendeteksi perubahan suhu atau disebut juga temperature dependent voltage.  </p>
 
 </ol>
 
-<h4>Mengapa memilih thermocouple</h4> 
+<h3>Mengapa memilih thermocouple</h3> 
 
 <p>Thermocouple harganya relatif murah untuk digunakan di dalam dunia industri, dapat mudah diganti, 
 memilki koneksi yang standar dan dapat mengukur suhu dengan jangkauan yang luas.
 Thermocouple tidak memerlukan catu daya tambahan. </p>
 
-<h4>Bagaimana cara kerja thermocouple </h4>
+<h3>Sejarah dan cara kerja thermocouple </h3>
 <p>Pada tahun 1821, seorang Fisikawan asal Jerman Thomas Johann Seebeck melakukan penelitian dan menemukan 2 logam konduktor 
 yang berbeda jenis yang ujungnya digabungkan ketika dipanaskan maka molekul atom akan bergetar dan elektron bebas didalam logam akan mengalir dari ujung logam konduktor yang panas
 menuju ujung logam konduktor yang dingin karena adanya perbedaan/gradient suhu dan akan menghasilkan energi listrik berupa tegangan,
@@ -66,7 +63,7 @@ Tegangan yang dihasilkan biasanya dalam bentuk tegangan rendah dan terdapat ther
 untuk melihat perubahan tegangan dalam mV terhadap perubahan panas.</p>
 
 <p>Berikut tabel reference thermocouple : </p>   
-<ul>
+<ul class="list-details">
 <li><a href="https://www.thermocoupleinfo.com/type-j-thermocouple.htm" target="_blank">Thermocouple type J</a></li>
 <li><a href="https://www.thermocoupleinfo.com/type-k-thermocouple.htm" target="_blank">Thermocouple type K</a></li>
 <li><a href="https://www.thermocoupleinfo.com/type-t-thermocouple.htm" target="_blank">Thermocouple type T</a></li>
