--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -3,5 +3,5 @@
     <a href="/thermocouple">Thermocouple</a>
     <a href="/rtd">RTD</a>
     <a href="/loadcell">Loadcell</a>
-    <a href="#">Speed Sensor</a>
+    <a href="/analyzer">Gas Analyzer</a>
 </nav>
