--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,10 +8,11 @@
     <div class="main-content">
         {{>header}}
 
-        <p>Saya merupakan seorang lulusan dari EVE <em>(Enterprise Base Vocational Education)</em> yaitu sebuah program pendidikan
-        setingkat ahlimadya atau D3  kerja sama antara PT Holcim Indonesia 
-        yang sekarang menjadi PT Solusi Bangun Indonesia dan Politeknik
-            Negeri Jakarta angkatan pertama kelulusan tahun 2008 dan sekarang saya bekerja sebagai seorang teknisi listrik dan instrumentasi di shift maintenance.
+        <p> Seorang teknisi kelistrikan dan instrumentasi yang bekerja di sebuah perusahaan yang bergerak di bidang 
+            industri manufaktur semen. Blog ini saya buat sebagai catatan bagi diri saya sendiri untuk
+            mempermudah mencari data karakteristik atau fungsi suatu alat yang berhubungan dengan kelistrikan dan instrumentasi.
+            Semoga blog ini barmanfaat bagi teman teman sesama teknisi atau pun seseorang yang baru ingin belajar
+            tentang kelistrikan dan instrumentasi. Terima kasih ⚡
         </p>
         <img src="img/profile-picture.jpeg" class="portrait">
     </div>
