--- a/templates/views/thermocouple.hbs
+++ b/templates/views/thermocouple.hbs
@@ -14,7 +14,7 @@
 <h2>{{article}}</h2>
 <p class="author">Posted by : <strong>Indra Permana</strong>  13 Mei 2022</p>
 
-<img src="img/thermocouple_illustration.jpg" width="500">
+<img src="img/thermocouple_illustration.jpg" width="500px">
 </header>
 <h3>Thermocouple sebagai sensor suhu</h3>
 
